<resources>
    <string name="app_name">CongCuSo.Net</string>
    <string name="action_calendar">Calendar</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_xsmb">Xổ số Miền Bắc</string>
    <string name="nav_item_xsmt">Xổ số Miền Trung</string>
    <string name="nav_item_xsmn">Xổ số Miền Nam</string>
    <string name="nav_item_so_loc">Số Lộc</string>
    <string name="nav_item_calendar">Lịch mở thưởng</string>
    <string name="nav_item_tien_ich">Kho tiện ích</string>
    <string name="nav_item_setup">Cài đặt</string>
    <string name="nav_item_rate">Đánh giá</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_xsmb</item>
        <item>@string/nav_item_xsmt</item>
        <item>@string/nav_item_xsmn</item>
        <item>@string/nav_item_so_loc</item>
        <item>@string/nav_item_calendar</item>
        <item>@string/nav_item_tien_ich</item>
        <item>@string/nav_item_setup</item>
        <item>@string/nav_item_rate</item>
    </string-array>

    <string name="title_xsmb">Miền Bắc</string>
    <string name="title_xsmt">Miền Trung</string>
    <string name="title_xsmn">Miền Nam</string>
    <string name="title_soloc">Số Lộc</string>
</resources>
