<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/container_body"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/colorBacground"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/btn_nav_mb"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/image_w"
                        android:layout_height="@dimen/image_h"
                        android:src="@mipmap/navbar_icon_kqxs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_xsmb"
                        android:textColor="#fff"
                        android:textSize="@dimen/title_nav_bottom" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/btn_nav_mt"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/image_w"
                        android:layout_height="@dimen/image_h"
                        android:src="@mipmap/navbar_icon_kqxs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_xsmt"
                        android:textColor="#fff"
                        android:textSize="@dimen/title_nav_bottom" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/btn_nav_mn"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/image_w"
                        android:layout_height="@dimen/image_h"
                        android:src="@mipmap/navbar_icon_kqxs" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_xsmn"
                        android:textColor="#fff"
                        android:textSize="@dimen/title_nav_bottom" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/btn_nav_sl"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/image_w"
                        android:layout_height="@dimen/image_h"
                        android:src="@mipmap/navbar_icon_mobat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_soloc"
                        android:textColor="#fff"
                        android:textSize="@dimen/title_nav_bottom" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <fragment
            android:id="@+id/fragment_navigation_drawer"
            android:name="com.dh.congcusonet.FragmentDrawer"
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/fragment_navigation_drawer"
            tools:layout="@layout/fragment_navigation_drawer" />

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>
