<?xml version="1.0" encoding="utf-8"?>
<com.gc.materialdesign.views.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@mipmap/setup_icon_volume_min" />

            <com.gc.materialdesign.views.Slider
                android:id="@+id/slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@color/colorBacground"
                materialdesign:max="100"
                materialdesign:min="0"
                materialdesign:showNumberIndicator="true" />
            <!--<SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />-->

            <ImageView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:src="@mipmap/setup_icon_volume_max" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#d6d4d4" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="Rung"
                android:textSize="16sp" />

            <com.gc.materialdesign.views.Switch
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorBacground"
                materialdesign:check="false" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#d6d4d4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="Chuông báo"
                android:textSize="16sp" />

            <com.gc.materialdesign.views.Switch
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorBacground"
                materialdesign:check="false" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#d6d4d4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/nav_item_xsmb"
                android:textSize="16sp" />

            <com.gc.materialdesign.views.Switch
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorBacground"
                materialdesign:check="false" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#d6d4d4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/nav_item_xsmt"
                android:textSize="16sp" />

            <com.gc.materialdesign.views.Switch
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorBacground"
                materialdesign:check="false" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#d6d4d4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="@string/nav_item_xsmn"
                android:textSize="16sp" />

            <com.gc.materialdesign.views.Switch
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorBacground"
                materialdesign:check="false" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#d6d4d4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:text="Không nhận thông báo"
                android:textSize="16sp" />

            <com.gc.materialdesign.views.Switch
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorBacground"
                materialdesign:check="false" />
        </LinearLayout>
    </LinearLayout>
</com.gc.materialdesign.views.ScrollView>